fix horizontal scroll

--- a/frontend/src/components/UI/footer/Footer.module.css
+++ b/frontend/src/components/UI/footer/Footer.module.css
@@ -1,7 +1,6 @@
 .footer{
 	background-color: #262626;
 	height: 123px;
-	width: 100vw;
 
 	color: white;
 }
