--- a/frontend/src/components/UI/header/Header.module.css
+++ b/frontend/src/components/UI/header/Header.module.css
@@ -18,7 +18,6 @@ h1, h2, h3, h4, h5, h6 {font-size: inherit;font-weight: 400;}
 .header{
 	background-color: #262626;
 	height: 123px;
-	width: 100vw;
 }
 .header__container{
 	max-width: 1358px;
